# Rust-tutorial

./: README.md  detect_anomal_log.sh  setup.sh  test_ui.py  test_ui.spec
app/: Main.qml  main.cpp
app/DetectAnomalLog/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  LogAnalyzer.cpp  LogAnalyzer.h  PCA.cpp  PCA.h  ParseLog.cpp  ParseLog.h  main.cpp
data/input_log/: logmesh  messages
data/original_log/: messages.old  wifilog  wifilog.old
data/original_log/etc/map/: mapd_cfg  mapd_default.cfg  wts_bss_info_config
data/original_log/tmp/log/: temp_device_log
data/result/: logmesh_structured.csv  logmesh_templates.csv  messages_structured.csv  messages_templates.csv
detect-anomaly-log-cpp/: CMakeLists.txt  PCA_AnomalyDetector.cpp  PCA_AnomalyDetector.hpp  main.cpp
guessing_game/src/: main.rs
log-analysis/: analysis_log.py
log-analysis/model/: __init__.py
log-parser/: parse_log.py  parse_log_with_drain.py  parse_log_with_log_cluster.py  requirements.txt
log-parser/LogCluster/: __init__.py
log-parser/data/result/: logmesh_structured.csv  logmesh_templates.csv
loganalysis/: analysis_log.py  analysis_log_PCA_without_label.py  analysis_log_invariants_miner_without_lables.py  anomalies_detected.csv  data_instances.csv  data_instances_wifi.csv  dataloader.py  test.py
loganalysis/models/: __init__.py
loganalysis/results/: anomalies_detected.csv  anomalous_events_with_templates.csv
